[project]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = [
    {name = "Sh1ra0ri", email = "xxnon.7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy",
    "black",
    "isort",
    "flake8",
    "pytest",
    "pytest-cov"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"